[package]
name = "actix_web_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
mysql = "26.0.0"
redis = "0.32.4"
deadpool-redis = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.141" # 异步支持
log = "0.4"
env_logger = "0.11"   # 最新版可查 crates.io
chrono = "0.4"
num_cpus = "1.17.0"